fixed h3 bug on small devices

--- a/components/Header/Header.module.sass
+++ b/components/Header/Header.module.sass
@@ -20,7 +20,7 @@
   // background-image: url("/theme/images/header-background.jpg")
   // background-size: cover
   .inner
-    padding: 0 0 0 40px
+    padding: 0 40px 0 40px
     font-size: $defaultFontSize * 2
     line-height: $defaultLineHeight * 1.75
     color: #ffffff
