--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -30,8 +30,8 @@ h2
 
 h3
   color: $h3Color
-  font-size: $h3FontSize / 1.2
-  line-height: $h3FontSize * 1.2
+  font-size: $h3FontSize / 1.5
+  line-height: $h3FontSize * 1.1
   margin-top: 30px
   @include media(">=bigPhone")
     font-size: $h3FontSize
